# accent-fleet-analytics

./: .env.example  .gitignore  AGENTS.md  Makefile  NEXT_STEPS.md  README.md  REFACTOR_RATIONALE.md  SMOKE_TEST_v0.5.0.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  deps.py  main.py  middleware.py  versioning.py
app/ai/: __init__.py  config.py
app/auth/: __init__.py  admin_routes.py  audit.py  deps.py  middleware.py  passwords.py  principal.py  rate_limit.py  routes.py  tokens.py
app/cache/: __init__.py  redis_client.py
app/routes/: admin.py  dashboards.py  devices.py  health.py  metrics.py  score.py
app/schemas/: auth.py  dashboards.py  device.py  score.py
app/services/: dashboards.py
config/: cleaning_rules.yaml  feature_definitions.yaml  pipeline.yaml
dashboard/: Home.py
dashboard/lib/: api.py  cache.py  db.py  theme.py
dashboard/pages/: 0_Executive_Overview.py  1_Operations.py  2_Maintenance.py  3_Risk_and_Behavior.py  4_What_If.py  5_Fleet_Efficiency.py  6_Safety_Scorecard.py  7_Predictive_Alerts.py  8_Tenant_Billing.py
docker/: api.Dockerfile  base.Dockerfile  dashboard.Dockerfile  etl.Dockerfile  retrain.Dockerfile  retrain.crontab  web.Dockerfile
docker/nginx/: .gitignore  nginx.conf
docker/scripts/: backup_mlflow.sh  backup_postgres.sh  run_monthly_retrain.sh
docs/: DATA_PREPARATION.md  EVALUATION_EXPLAINED.md  HARDENING_SPRINT_SUMMARY.md  HOW_IT_WORKS.md  ML_MODELS_EXPLAINED.md  MODELING_AND_EVALUATION.md  RISK_MODEL_WORKED_EXAMPLE.md  ai_query.md  auth_design.md  azure-mcp-smoke-test.md
docs/runbooks/: auth_enforcement_flip.md  role_separation_cutover.md
models/risk_score/: metadata.json
notebooks/: _template.ipynb
notebooks/00_setup/: 00_environment_check.ipynb  01_create_schemas.ipynb
notebooks/01_data_understanding/: 01_staging_profile.ipynb  02_cleaning_rules_exploration.ipynb  03_eda_chapter3.ipynb
notebooks/03_feature_engineering/: 01_explore_ml_features.ipynb  02_handle_missing_values.ipynb  03_handle_outliers.ipynb  04_data_encoding.ipynb  05_handle_imbalanced_dataset.ipynb  06_build_ml_dataset.ipynb
report/: bibliography.bib  main.aux  main.bbl  main.bcf  main.blg  main.ist  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  modeling_and_evaluation.md  preamble.tex
scripts/: _smoke_ai_risk.py  _smoke_tenant_billing.py  backfill.py  bench_api.py  build_eval_notebooks.py  reconstruct_telemetry_trips.py  refresh_fuel_price.py  reset_password.py  retrain_monthly.py  retrain_risk_monthly.py  run_batch.py  seed_auth.py  train_clustering.py  train_risk_score.py
sql/: 00_schemas_and_state.sql  01_dim_tenant.sql  02_dim_vehicle.sql  03_dim_device.sql  04_dim_driver.sql  05_dim_date_hour.sql  07_bridge_device_driver_load.sql  10_fact_trip_incremental.sql  11_fact_overspeed_incremental.sql  12_fact_stop_incremental.sql  13_fact_speed_notification_incr.sql  14_fact_daily_activity_incr.sql  15_fact_harsh_event_incremental.sql  16_fact_telemetry_daily_incr.sql  17_fact_notification_incr.sql  18_fact_maintenance_incr.sql  19_fact_maintenance_line_incr.sql  20_mart_device_monthly_behavior.sql  21_v_device_risk_profile.sql  22_v_ml_features.sql  23_v_fleet_risk_dashboard.sql  24_fact_fueling_incr.sql  25_mart_device_monthly_telemetry.sql  26_v_ml_features_full.sql  27_fact_device_cluster_assignment.sql  27_fact_trip_reconstruct_telemetry_last_month.sql  28_fact_device_risk_score.sql  29_clean_mart_nulls.sql  30_mart_fleet_daily.sql  31_mart_vehicle_monthly.sql  32_mart_tenant_monthly_summary.sql  33_v_executive_dashboard.sql  34_v_operational_dashboard.sql  35_v_maintenance_dashboard.sql  36_v_fleet_efficiency_dashboard.sql  37_v_safety_scorecard_dashboard.sql  38_v_predictive_alerts_dashboard.sql  39_v_tenant_billing_dashboard.sql  40_retention.sql  41_fact_device_risk_profile.sql  (+17 more)
tests/: conftest.py  test_api_dashboards.py  test_api_devices.py  test_api_health.py  test_api_score.py  test_api_versioning.py  test_auth_middleware.py  test_auth_unit.py  test_batch_scoring.py  test_cleaning_rules.py  test_dashboard_smoke.py  test_drift.py  test_feature_computation.py  test_incremental_semantics.py  test_inference.py  test_promotion.py  test_rls_listener.py  test_sql_loader.py  test_train_clustering.py  test_train_risk.py  test_watermark.py
web/: .dockerignore  .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  (+1 more)
(+217 files in other folders)
