[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accent-fleet-analytics"
version = "0.3.0"
description = "CRISP-DM Phase 3 — stream-ready data preparation pipeline for Accent fleet telematics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Accent Data Team" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit a live Postgres instance",
    "slow: tests that take >5 s",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
