[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accent-fleet-analytics"
version = "0.3.0"
description = "CRISP-DM Phase 3 — stream-ready data preparation pipeline for Accent fleet telematics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Accent Data Team" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit a live Postgres instance",
    "slow: tests that take >5 s",
]

[tool.ruff]
line-length = 100
target-version = "py311"

# One-off matplotlib figure generators and notebook builders use intentional
# one-liner style (semicolons, long lines with embedded plotting params).
# Linting them produces noise without value — these aren't on the production
# hot path. Re-introduce when the figure code moves into a maintained module.
extend-exclude = [
  "scripts/python/figures",
  "scripts/build_eval_notebooks.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Streamlit's multi-page convention REQUIRES filenames like `Home.py` and
# `0_Executive_Overview.py` — the numeric prefix controls page ordering and
# the capitalised stem becomes the visible page label. Renaming would break
# the dashboard, so N999 (invalid-module-name) is ignored for these.
# E501 (line-too-long) is also ignored because Streamlit pages embed long
# literal Markdown / column-metric expressions where wrapping hurts more
# than it helps.
"dashboard/Home.py" = ["N999", "E501"]
"dashboard/pages/*.py" = ["N999", "E501"]

# sklearn's training API uses uppercase `X` (feature matrix) and lowercase
# `y` (target vector) by convention. Renaming would obscure what the code
# does for anyone coming from a ML background. Same applies to test code
# that exercises the sklearn-shaped artifacts.
"src/accent_fleet/ml/*.py" = ["N806"]
"tests/test_train_risk.py" = ["N806"]
